# data-eng-genai-demo

./: Makefile  pyproject.toml
.agents/skills/testing-pipeline/: SKILL.md
config/: config.yaml
src/: main.py
src/core/: config.py  exceptions.py
src/data_io/: data_io_manager.py
src/jobs/: run_top_10.py
src/transforms/: vendas_transforms.py
src/utils/: logging_setup.py  spark_manager.py
tests/: test_vendas_transforms.py
